# mc-server-manager-api

./: AppImageBuilder.yml  README.md  main.py  pyproject.toml
mc_server_manager_api/: models.py  utils.py
