[tool.poetry]
name = "mc-server-manager-api"
version = "0.1.0"
description = ""
authors = ["Dummerle <44114474+Dummerle@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.81.0"
uvicorn = "^0.18.3"
mc-server-interaction = {git = "https://github.com/Uncooldevs/mc-server-interaction", rev = "main"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
