[tool.poetry]
name = "mc-server-manager-api"
version = "0.1.0"
description = ""
authors = ["Dummerle <44114474+Dummerle@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.81.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
python-multipart = "^0.0.5"
mc-server-interaction = "^0.2.0"


[tool.poetry.dev-dependencies]
requests = "^2.28.1"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
